--- a/reactprojetofinal/index.html
+++ b/reactprojetofinal/index.html
@@ -5,8 +5,14 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Trabalho Final</title>
+    <style>
+      #body1{
+        margin: 0;
+        padding: 0;
+      }
+    </style>
   </head>
-  <body>
+  <body id="body1">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
